--- a/day_2_session_1_order-of-ops_negatives.tex
+++ b/day_2_session_1_order-of-ops_negatives.tex
@@ -148,7 +148,7 @@
 \end{itemize}
 \end{frame}
 
-\myframe{Your turn: order of operations}
+\myframe{Exercise: order of operations}
 \begin{itemize}
 \item Try to work out the following examples by yourself or in pairs:
 \begin{enumerate}
@@ -161,7 +161,15 @@
 \end{itemize}
 \end{frame}
 
-\myframe{Your turn: solutions}
+\myframe{Note on exercises}
+\begin{itemize}
+\item Solutions for the exercises are usually in the slides
+\item[]
+\item However, please attempt them first without looking at the solution!
+\end{itemize}
+\end{frame}
+
+\myframe{Solution: order of operations}
 \begin{enumerate}
 \item $(5 \times 6) + 4 = 34$. PEMDAS:
 \begin{itemize}
@@ -284,7 +292,7 @@
 \end{itemize}
 \end{frame}
 
-\myframe{Your turn: negative numbers}
+\myframe{Exercise: negative numbers}
 \begin{itemize}
 \item Try to work out the following examples by yourself or in pairs:
 \begin{enumerate}
@@ -297,7 +305,7 @@
 \end{itemize}
 \end{frame}
 
-\myframe{Your turn: solutions}
+\myframe{Solution: negative numbers}
 \begin{enumerate}
 \item $-5.2 - (-11.3) = 6.1$
 \begin{itemize}
@@ -374,7 +382,7 @@
 \end{itemize}
 \end{frame}
 
-\myframe{Your turn: absolute value, negative numbers}
+\myframe{Exercise: absolute value, negative numbers}
 \begin{itemize}
 \item Try to work out the following examples by yourself or in pairs:
 \begin{enumerate}
@@ -389,7 +397,7 @@
 \end{itemize}
 \end{frame}
 
-\myframe{Your turn: solutions}
+\myframe{Solution: absolute value, negative numbers}
 \begin{enumerate}
 \item $|-5| = |5| = 5$
 \item[]
